Fix rental form input overflow

--- a/src/components/RentalSearchForm/RentalSearchForm.module.css
+++ b/src/components/RentalSearchForm/RentalSearchForm.module.css
@@ -59,6 +59,7 @@
 
 .inputField {
   width: 100%;
+  box-sizing: border-box;
   border-radius: 16px;
   border: 1px solid #d0d5dd;
   background: #fff;
